# qt-listview-generic-cpp-model

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
cpp/: data_item.cpp  data_item.h  data_item_2.cpp  data_item_2.h  list_model.cpp  list_model.h  provider.cpp  provider.h  qobject_list.h  qobject_list_model.h
qml/: DataItemDelegate.qml  Main.qml
